       as well.)
  * optimization: simple uses of HANDLER-CASE and HANDLER-BIND no
    longer cons.
  * bug fix: EAI_NODATA is deprecated since RFC 3493. Stop using it
    in sb-bsd-sockets.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** NIL is a valid function name (regression at 1.0.13.38)
    ** FILL on lists was missing its return value (regression at 1.0.12.27)
    ** STRING-TRIM, STRING-LEFT-TRIM, and STRING-RIGHT-TRIMP did not respect
       fill pointers properly (regression at 1.0.12.23)

changes in sbcl-1.0.17 relative to 1.0.16:
  * temporary regression: user code can no longer allocate closure
    variable storage on stack, due to bug 419 without explicitly
    requesting it. Please consult sbcl-devel for advice if you need to
    use this feature in the meanwhile.
  * new feature: runtime argument --control-stack-size can be used to
    adjust thread default control stack size.
  * enhancement: improved TIME output
    ** all times are reported using the measured accuracy (milliseconds
       for real and GC times, microseconds for everything else.)
    ** processor cycle counts on x86 and x86-64.
    ** interpreted forms are counted for both evaluator modes.
    ** number of lambdas converted by the compiler is reported.
    ** CPU percentage report (computed from real and total run time.)
    ** more comprehensive run time reporting, using a condenced format
    ** interperted form, lambda, and page fault counts are omitted
       when zero.
  * optimization: ADJOIN and PUSHNEW are upto ~70% faster in normal
    SPEED policies.
  * optimization: APPEND is upto ~10% faster in normal SPEED policies.
  * optimization: two argument forms of LAST are upto ~10% faster
    in normal SPEED policies.
  * optimization: NCONC no longer needs to heap cons its &REST list
    in normal SPEED policies.
  * bug fix: SB-FLUID build feature no longer breaks the build. (thanks
    to Sidney Markowitz)